src/emit/emitter/snapshots/hebi__emit__emitter__tests__func.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
fn test():
  pass

test()


# Func:
function "test":
  frame_size: 4
  length: 3
  const: <empty>
  code:
    0 | push_none 
    1 | ret 
    2 | suspend 

function "code":
  frame_size: 4
  length: 9
  const (length=2):
    0: <function descriptor "test">
    1: "test"
  code:
    0 | create_function [0]
    2 | store_global [1]
    4 | load_global [1]
    6 | call0 
    7 | ret 
    8 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
