src/emit/emitter/snapshots/hebi__emit__emitter__tests__if_stmt-2.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
if a:
  b := a
  print b
else:
  print b


# Func:
function "code":
  frame_size: 5
  length: 26
  const (length=2):
    0: "a"
    1: "b"
  code:
     0 | load_global [0]
     2 | jump_if_false offset=19
     4 | nop 
     5 | nop 
     6 | nop 
     7 | nop 
     8 | load_global [0]
    10 | store_reg r4
    12 | load_reg r4
    14 | print 
    15 | jump offset=9
    17 | nop 
    18 | nop 
    19 | nop 
    20 | nop 
    21 | load_global [1]
    23 | print 
    24 | ret 
    25 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  
