src/emit/emitter/snapshots/hebi__emit__emitter__tests__imports-5.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
import test

print test.value


# Func:
function "code":
  frame_size: 5
  length: 10
  const (length=2):
    0: <path test>
    1: "value"
  code:
     0 | import [0], r4
     3 | load_reg r4
     5 | load_field [1]
     7 | print 
     8 | ret 
     9 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  
