src/emit/emitter/snapshots/hebi__emit__emitter__tests__imports.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
fn main():
  import test

  print test.symbol


# Func:
function "main":
  frame_size: 5
  length: 11
  const (length=2):
    0: <path test>
    1: "symbol"
  code:
     0 | import [0], r4
     3 | load_reg r4
     5 | load_field [1]
     7 | print 
     8 | push_none 
     9 | ret 
    10 | suspend 

function "code":
  frame_size: 4
  length: 6
  const (length=2):
    0: <func descriptor "main">
    1: "main"
  code:
    0 | create_function [0]
    2 | store_global [1]
    4 | ret 
    5 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
